--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
     <title>TicketHack</title>
 </head>
 
@@ -33,8 +34,8 @@
                 <form action="" method="get" class="h-full relative">
                     <input type="text" class="bg-slate-200 w-full p-2 rounded-t-md border-b-2 border-solid border-slate-300" id="input-departure" placeholder="Departure">
                     <input type="text" class="bg-slate-200 w-full p-2 rounded-b-md" id="input-arrival" placeholder="Arrival">
-                    <input type="date" class="bg-slate-200 w-full p-2 rounded-md mt-4" value="2023-04-11" id="input-date">
-                    <input type="submit" class="w-full p-2 rounded text-white bg-[#4FAA91] absolute bottom-0 left-0" id="input-submit">
+                    <input type="date" class="bg-slate-200 w-full p-2 rounded-md mt-4" value="" id="input-date">
+                    <input type="button" value="Search" class="w-full p-2 rounded text-white bg-[#4FAA91] absolute bottom-0 left-0" id="input-submit">
                 </form>
             </div>
             <div id="result" class="bg-white m-4 shadow p-4 text-center rounded-lg w-1/2">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
