--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             </ul>
         </nav>
     </header>
-    <main class="h-3/4">
+    <main>
         <div id="titles" class="text-center m-8">
             <h2 class="text-white font-semibold md:text-4xl text-2xl m-4">Explore the world effortlessly by train !</h2>
             <p class="text-white text-xl font-light hidden md:block">Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</p>
         </div>
-        <div class="lg:flex lg:justify-between lg:w-3/4 m-auto">
+        <div class="lg:flex lg:justify-between lg:w-3/4 m-auto h-[30rem]">
             <div id="search" class="bg-white lg:m-6 shadow p-6 rounded-lg md:w-3/4 md:mx-auto mx-4 my-6">
                 <form action="" method="get" class="h-full relative">
                     <input type="text" class="bg-slate-200 w-full p-2 rounded-t-md border-b-2 border-solid border-slate-300" id="input-departure" placeholder="Departure">
@@ -38,8 +38,8 @@
                     <input type="button" value="Search" class="w-full p-2 mt-4 rounded text-white bg-[#4FAA91] lg:absolute lg:bottom-0 lg:left-0" id="input-submit">
                 </form>
             </div>
-            <div id="result" class="bg-white lg:m-6 shadow p-6 text-center rounded-lg md:w-3/4 md:mx-auto mx-4 my-6">
-                <img src="./img/train.png" alt="Image de train" class="m-auto w-1/2">
+            <div id="result" class="bg-white overflow-y-auto lg:m-6 shadow p-6 text-center rounded-lg md:w-3/4 md:mx-auto h-[22rem] lg:h-auto mx-4 my-6">
+                <img src="./img/train.png" alt="Image de train" class="m-auto w-1/3 lg:w-1/2 ">
                 <hr class="w-3/4 mx-auto my-6 h-0.5 bg-[#4FAA91]">
                 <p class="">It’s time to book your future trip.</p>
             </div>
