css sur cart.js

--- a/cart.html
+++ b/cart.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <main class="h-screen flex content-center">
-        <div id="cart" class="bg-white text-center w-4/5 m-auto p-4">
+    <main class="h-[80vh] flex content-center">
+        <div id="cart" class="bg-white text-center w-full md:w-3/4 lg:w-1/2 md:mx-auto pt-4 rounded-md mx-2 m-auto">
             <p class="m-2">No tickets in your cart.</p>
             <p class="m-2">Why not <a href="index.html" class="text-[#4FAA91]">plan a trip?</a></p>
         </div>
