--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>TicketHack</title>
 </head>
 
-<body class="bg-[url('./img/background.jpg')] bg-cover h-screen bg-no-repeat bg-center font-['Source_Sans_Pro']">
+<body class="bg-[url('./img/background.jpg')] bg-cover bg-fixed h-screen bg-no-repeat bg-center font-['Source_Sans_Pro']">
     <header class="bg-white md:flex md:justify-between py-4 px-8 text-center">
         <a href="index.html"><h1 class="text-[#4FAA91] font-bold text-2xl">Tickethack</h1></a>
         <nav>
@@ -38,7 +38,7 @@
                     <input type="button" value="Search" class="w-full p-2 mt-4 rounded text-white bg-[#4FAA91] lg:absolute lg:bottom-0 lg:left-0" id="input-submit">
                 </form>
             </div>
-            <div id="result" class="bg-white overflow-y-auto lg:m-6 shadow p-6 text-center rounded-lg md:w-3/4 md:mx-auto h-[22rem] lg:h-auto mx-4 my-6">
+            <div id="result" class="bg-white overflow-y-auto lg:m-6 shadow p-6 text-center rounded-lg md:w-3/4 md:mx-auto h-[18rem] lg:h-auto mx-4 my-6">
                 <img src="./img/train.png" alt="Image de train" class="m-auto w-1/3 lg:w-1/2 ">
                 <hr class="w-3/4 mx-auto my-6 h-0.5 bg-[#4FAA91]">
                 <p class="">It’s time to book your future trip.</p>
