--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
-    <title>TicketHack - Cart</title>
+    <title>TicketHack - Booking</title>
 </head>
 
 <body class="font-['Source_Sans_Pro'] bg-slate-200">
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <main class="h-screen flex content-center">
-        <div id="cart" class="bg-white text-center w-4/5 m-auto p-4">
+    <main class="h-[80vh] flex content-center">
+        <div id="cart" class="bg-white text-center w-full md:w-3/4 lg:w-1/2 md:mx-auto pt-4 rounded-md mx-2 m-auto">
             <p class="m-2">No booking yet.</p>
             <p class="m-2">Why not <a href="index.html" class="text-[#4FAA91]">plan a trip?</a></p>
         </div>
